# EvalVault

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  README.md  docker-compose.langfuse.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
config/: models.yaml
data/: evaluations.db
devlogs/: 2024-12-24-init.md
docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  RAGAS_CoreConcepts.md  RAGAS_EVAL_PROJECT_PLAN.md  RAGAS_REFERENCE.md  README.ko.md  README.md  ROADMAP.md  STRATEGIC_DIRECTION.md  STRUCTURE_REVIEW.md  TEST_COVERAGE_PLAN.md  UNINTEGRATED_FEATURES.md  USER_GUIDE.md  plan_ollama_support.md  ragas_evaluation_usage.md
examples/: kg_generator_demo.py
reports/: kg_stats_report.json
scripts/: run_with_timeout.py  test_full_evaluation.py  verify_workflows.py
src/evalvault/adapters/inbound/: __init__.py  cli.py
src/evalvault/adapters/outbound/dataset/: __init__.py  base.py  csv_loader.py  excel_loader.py  json_loader.py  loader_factory.py
src/evalvault/adapters/outbound/llm/: __init__.py  ollama_adapter.py  openai_adapter.py
src/evalvault/adapters/outbound/storage/: postgres_adapter.py  schema.sql  sqlite_adapter.py
src/evalvault/adapters/outbound/tracker/: __init__.py  langfuse_adapter.py
src/evalvault/config/: __init__.py  model_config.py  settings.py
src/evalvault/domain/entities/: __init__.py  dataset.py  result.py
src/evalvault/domain/services/: __init__.py  evaluator.py  experiment_manager.py
src/evalvault/ports/inbound/: __init__.py  evaluator_port.py
src/evalvault/ports/outbound/: __init__.py  dataset_port.py  llm_port.py  storage_port.py  tracker_port.py
tests/fixtures/: README.md  sample_dataset.csv  sample_dataset.json  sample_dataset.xlsx
tests/fixtures/e2e/: comprehensive_dataset.json  evaluation_test_sample.json  insurance_document.txt  insurance_qa_korean.json
tests/integration/: __init__.py  conftest.py  test_cli_integration.py  test_data_flow.py  test_e2e_scenarios.py  test_evaluation_flow.py  test_full_workflow.py  test_langfuse_flow.py  test_storage_flow.py
tests/unit/: conftest.py  test_anthropic_adapter.py  test_azure_adapter.py  test_cli.py  test_data_loaders.py  test_entities.py  test_entities_kg.py  test_entity_extractor.py  test_evaluator.py  test_experiment.py  test_insurance_metric.py  test_kg_generator.py  test_langfuse_tracker.py  test_llm_relation_augmenter.py  test_mlflow_tracker.py  test_model_config.py  test_ollama_adapter.py  test_openai_adapter.py  test_ports.py  test_postgres_storage.py  test_sqlite_storage.py  test_testset_generator.py
