[project]
name = "evalvault"
version = "0.1.0"
description = "RAG evaluation system using Ragas with Langfuse tracing"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "EvalVault Contributors" }
]
maintainers = [
    { name = "EvalVault Contributors" }
]
keywords = [
    "rag",
    "evaluation",
    "ragas",
    "langfuse",
    "llm",
    "retrieval-augmented-generation",
    "nlp",
    "machine-learning",
    "ai",
    "testing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "ragas",
    "langfuse",
    "openai",
    "langchain-openai",
    "networkx",
    "pydantic",
    "pydantic-settings",
    "typer",
    "rich",
    "pandas",
    "openpyxl",
    "xlrd",      # For reading .xls files (Excel 97-2003)
    "chardet",   # For automatic encoding detection in CSV files
    "truststore>=0.10.4",
]

[project.urls]
Homepage = "https://github.com/ntts9990/EvalVault"
Documentation = "https://github.com/ntts9990/EvalVault#readme"
Repository = "https://github.com/ntts9990/EvalVault.git"
Issues = "https://github.com/ntts9990/EvalVault/issues"
Changelog = "https://github.com/ntts9990/EvalVault/releases"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "pytest-xdist",
    "pytest-rerunfailures",
    "pytest-html",      # HTML test reports
    "ruff",
]
anthropic = [
    "anthropic",
]
postgres = [
    "psycopg[binary]>=3.0.0",
]
mlflow = [
    "mlflow>=2.0.0",
]

[project.scripts]
evalvault = "evalvault.adapters.inbound.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evalvault"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "B008",  # Do not perform function call in argument defaults (Typer pattern)
    "B904",  # Within except clause, raise with from (Typer Exit pattern)
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Report generation options (can be overridden via CLI)
addopts = "--tb=short"
# JUnit XML output for CI/CD integration
junit_family = "xunit2"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
build_command = "uv build"
commit_message = "chore(release): {version}\n\n🤖 Automatically generated by python-semantic-release"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "build", "chore", "ci", "docs", "style", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.remote]
type = "github"

[tool.semantic_release.publish]
upload_to_vcs_release = true
